# CGCourse2026

./: CMakeLists.txt  NOTA.txt
src/: CMakeLists.txt
src/code_03_wrapping_shaders_buffers/: CMakeLists.txt
src/code_05_assonometry/: CMakeLists.txt
src/code_06_arm_rotations/: CMakeLists.txt  main_06.cpp
src/code_08_raster/: CMakeLists.txt  main_08.cpp
src/code_091_lighting_shading_modified/: CMakeLists.txt  main_09.cpp
src/code_091_lighting_shading_modified/shaders/: basic.frag  basic.vert
src/code_10_gltf_loader/: CMakeLists.txt  main_10.cpp
src/common/: gltf_loader.h
